--- a/index.html
+++ b/index.html
@@ -17,19 +17,25 @@ h2 {
   color: #176B39;
   margin-bottom: 10px;
 }
-.datetime-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 260px;
-  margin: 0 auto 14px auto;
-  padding: 6px 14px;
-  border-radius: 14px;
-  background: linear-gradient(90deg, #41e671 0%, #176B39 100%);
-  color: #fff;
-  font-size: 11px;
-  font-weight: bold;
-  box-shadow: 0 4px 8px rgba(0,0,0,.15);
+.clock-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 180px;
+    margin: 0 auto 13px auto;
+    padding: 2.5px 12px;
+    border-radius: 11px;
+    background: linear-gradient(90deg, #41e671 0%, #176B39 100%);
+    box-shadow: 0 1px 4px 0 #bbdfbb70;
+    font-size: 11px;
+    color: #fff;
+    letter-spacing: 1.4px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    opacity: 0.90;
+    position: relative;
+    z-index: 10;
 }
 .card {
   background: #fff;
