--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     display:flex;
     justify-content:space-between;
     align-items:center;
-    max-width:320px;
+    max-width:250px;
     margin:0 auto 16px auto;
     padding:8px 16px;
     border-radius:18px;
@@ -143,7 +143,7 @@
 
   <label>ROUND TIME</label>
   <select id="round">
-    <option value="">-- SELECT --</option>
+    <option value="">- PLEASE SELECT -</option>
     <option>08:00</option>
     <option>11:00</option>
     <option>14:00</option>
