--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <label>REG NUM</label>
   <input id="regInput" placeholder="ABC1234" autocomplete="off" inputmode="text" />
 
-  <div class="hint" id="hintText">LOT GV01 / 33 (Swipe kiri/kanan pun boleh)</div>
+  <div class="hint" id="hintText">LOT GV01 / 33</div>
 
   <button class="submit" type="button" onclick="submitAll()">SUBMIT ALL</button>
 
