--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   width:100%;
   padding:14px;
   font-size:18px;
-  font-weight:bold
+  font-weight:900;
   border-radius:12px;
   border:2px solid #176B39;
   margin-top:8px;
