--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     display:flex;
     justify-content:space-between;
     align-items:center;
-    max-width:320px;
+    max-width:180px;
     margin:6px auto 10px auto;
     padding:7px 14px;
     border-radius:18px;
     background:linear-gradient(90deg,#41e671 0%, #176B39 100%);
     color:#fff;
-    font-size:13px;
+    font-size:11px;
     font-weight:900;
     box-shadow:0 4px 10px rgba(0,0,0,.12);
   }
@@ -67,7 +67,6 @@
     outline:none;
   }
 
-  /* LOT nav (KEKALKAN SAIZ LOT BESAR) */
   .lot-nav{
     display:flex;
     gap:10px;
@@ -89,10 +88,10 @@
   .lot-display{
     flex:1;
     text-align:center;
-    padding:14px 0;          /* kekal besar */
+    padding:14px 0;          
     border-radius:12px;
     border:2px solid #176B39;
-    font-size:20px;          /* kekal besar */
+    font-size:20px;         
     font-weight:900;
     background:#f3f3f3;
     color:#176B39;
@@ -130,7 +129,7 @@
 
   .footer{
     text-align:center;
-    font-size:11px;
+    font-size:10px;
     color:#666;
     margin-top:10px;
   }
