--- a/index.html
+++ b/index.html
@@ -278,23 +278,24 @@ select option[value=""]{
 
 <div class="card">
 
-  <label>ROUND TIME</label>
+  <label>PATROLLING TIME</label>
   <select id="round" required>
     <option value="" disabled selected>-PLEASE SELECT-</option>
-    <option>08:00</option>
-    <option>11:00</option>
-    <option>14:00</option>
-    <option>17:00</option>
-    <option>20:00</option>
-    <option>23:00</option>
-    <option>02:00</option>
-    <option>05:00</option>
+    <option>08:00 AM</option>
+    <option>11:00 AM</option>
+    <option>02:00 PM</option>
+    <option>05:00 PM</option>
+    <option>08:00 PM</option>
+    <option>11:00 PM</option>
+    <option>02:00 AM</option>
+    <option>05:00 AM</option>
   </select>
 
   
   <label>PARKING LIST</label>
   <select id="zoneSelect">
-    <option value="GV" selected>GROUND VISITOR (GV01-GV33)</option>
+    <option value="" disabled selected>-PLEASE SELECT-</option>
+    <option value="GV">GROUND VISITOR (GV01-GV33)</option>
     <option value="P8Z1">P8 ZONE 1 (P8-001-P8-015)</option>
     <option value="P8Z2">P8 ZONE 2 (P8-046-P8-089)</option>
     <option value="P8Z3">P8 ZONE 3 (P8-115-P8-140)</option>
